--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,14 +14,14 @@ body {
     --card-foreground: 224 71% 4%;
     --popover: 0 0% 100%;
     --popover-foreground: 224 71% 4%;
-    --primary: 224 71% 4%; /* Preto */
+    --primary: 0 0% 0%; /* Preto */
     --primary-foreground: 0 0% 98%; /* Branco para texto do botão */
     --secondary: 45 95% 55%;
     --secondary-foreground: 45 95% 10%;
     --muted: 220 14% 96%;
     --muted-foreground: 220 9% 46%;
-    --accent: 120 100% 45%; /* Verde Vibrante */
-    --accent-foreground: 120 100% 5%;
+    --accent: 84 93% 54%; /* Verde Vibrante */
+    --accent-foreground: 84 93% 14%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
     --border: 220 13% 91%;
@@ -90,5 +90,9 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+  }
+
+  :not(.dark) body {
+    background: linear-gradient(to bottom, hsl(84, 93%, 54%), hsl(142, 71%, 45%));
   }
 }
