--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ body {
 
 @layer base {
   :root {
-    --background: 142 76% 97%;
+    --background: 142 81% 15%;
     --foreground: 142 10% 10%;
     --card: 0 0% 100%;
     --card-foreground: 142 10% 10%;
@@ -87,10 +87,7 @@ body {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
-  }
-
-  :not(.dark) body {
+    @apply text-foreground;
     background: linear-gradient(to bottom, hsl(142, 81%, 15%), hsl(142, 71%, 25%));
   }
 }
